minor spacing issues
spacing on the menu

--- a/a.css
+++ b/a.css
@@ -134,7 +134,7 @@ button.start
     font-family: 'Avant Garde', Avantgarde, 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
     font-variant: small-caps;
     font-size:12px;
-    height: 50px;
+    height: 90px;
     width : 250px;
     text-decoration:none;
     text-shadow:0px 1px 0px #3d768a;
